--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
 </header>
 
 <body>
-    <div class="general">
+    <div class="maincontent">
         <h1 class="heading">Contact Me</h1>
         <div class="line"> </div>
 
