--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <title>Maria Cruz</title>
@@ -16,7 +16,7 @@
         </div>
 </header>
 <body>
-    <div class="general">
+    <div class="maincontent">
         <h1 class="heading">About Me</h1>
         <div class="line"> </div>
         <img class="myphoto" src="assets/images/IMG_2459.jpg"> 
