--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
         </div>
 </header>
 <body>
-    <div class="general">
+    <div class="maincontent">
         <h1 class="heading">Portfolio</h1>
         <div class="line"> </div>
 
